--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,13 +32,50 @@
 
   <body>
     <div class="container">
-      <div class="jumbotron">
-        responsive, mobile-first projects on the web.</p> 
-        <canvas id="myCanvas" width="200" height="100"></canvas>
+      <div class="row">
+      <div class="col-md-12">
+      <div class="row"/>
+        <div class="col-md-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">commands</div>
+            <div class="panel-body" style="position: relative; bottom: 0; right: 0;">
+            <ul class="list-group">
+                <li class="list-group-item">asdfds</li>
+                <li class="list-group-item">asdfds</li>
+                <li class="list-group-item">asdfds</li>
+                <li class="list-group-item">asdfds</li>
+                <li class="list-group-item">asdfds</li>
+                <li class="list-group-item">asdfds</li>
+            </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9">
+        <div class="jumbotron" style="max-height:20;overflow-y: scroll;">
+          </p> 
+          <canvas id="myCanvas" width="200" height="70" style="width:100%"></canvas>
+        </div>
       </div>
-      <p>This is some text.</p> 
-      <p>This is another text.</p> 
       </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+            a small description of things that are happening :)
+        </div>
+      </div>
+        <div class="row">
+            <div class="col-md-10">
+              <textarea rows="10" cols="20" style="width: 100%"> </textarea>
+            </div>
+            <div class="col-md-2">
+              <div class="btn-group-vertical" style="width:80%">
+                <button type="button" class="btn btn-primary">run</button>
+                <button type="button" class="btn btn-primary">clear</button>
+              </div>
+            </div>
+        </div>
+        <div>
+        </div>
     </div>
  
   </body>
