--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -34,6 +34,11 @@
     <div class="container">
       <div class="row">
       <div class="col-md-12">
+        <h1>Logo Simulator</h1>
+      </div>
+      </div>
+      <div class="row">
+      <div class="col-md-12">
       <div class="row"/>
         <div class="col-md-3">
           <div class="panel panel-default">
@@ -65,10 +70,10 @@
       </div>
         <div class="row">
             <div class="col-md-10">
-              <textarea rows="10" cols="20" style="width: 100%"> </textarea>
+              <textarea rows="8" cols="20" style="width: 100%"> </textarea>
             </div>
             <div class="col-md-2">
-              <div class="btn-group-vertical" style="width:80%">
+              <div class="btn-group-vertical" style="width:90%">
                 <button type="button" class="btn btn-primary">run</button>
                 <button type="button" class="btn btn-primary">clear</button>
               </div>
