refactoring to service

--- a/backoffice/listCommands.html
+++ b/backoffice/listCommands.html
@@ -87,7 +87,6 @@
 									   ng-readonly="updateable" 
 									   ng-model="input.id"/>
 
-									   {{updateable}}
 							</div>
 						</div>
 						<div>
@@ -123,6 +122,7 @@
 		</div>
 	</div>
 	<script src="../bower_components/angular/angular.min.js"></script>
+	<script src="../bower_components/angular-route/angular-route.min.js"></script>
 	<script src="../js/commands/commands.js"></script>
 
 	</body>
