--- a/backoffice/backoffice.html
+++ b/backoffice/backoffice.html
@@ -4,7 +4,7 @@
 		<p class="lead"></p>
 	</div>
 
-	<div class="panel panel-default" ng-show="!showNewCommand">
+	<div class="panel panel-default" ng-show="!vm.showNewCommand">
 		<div class="panel-heading">
             <h3 class="panel-title">List of Commands</h3>
         </div>
@@ -18,13 +18,13 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="command in commands">
+					<tr ng-repeat="command in vm.commands">
 						<td>
-							<a href="" ng-click="selectCommand(command)">{{command.id}}</a>
+							<a href="" ng-click="vm.selectCommand(command)">{{command.id}}</a>
 						</td>
 						<td>{{command.commandDescription}}</td>
 						<td>
-							<button type="button" class="btn btn-default" ng-click="removeRow(command)">
+							<button type="button" class="btn btn-default" ng-click="vm.removeRow(command)">
 								<span class="glyphicon glyphicon-remove"></span>
 							</button>
 						</td>
@@ -34,63 +34,10 @@
 		</div>
 	</div>
 	<div class="btn-group">
-		<button
-		   ng-show="!showNewCommand"
+   		<a href="#/edit"
+		   ng-show="!vm.showNewCommand"
 		   class="btn btn-primary" 
-		   ng-click="newCommand()">New Command
-		 </button>
-		 <button
-		   ng-show="showNewCommand"
-		   class="btn btn-primary" 
-		   ng-click="toCommandList()">To Command List
-		 </button>
-	</div>
-	<div class="panel panel-default" ng-show="showNewCommand">
-		<div class="panel-heading">
-            <h3 class="panel-title">New Command</h3>
-        </div>
-        <div class="panel-body">
-			<form>
-				<div class="row">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-2">Command Name</div>
-					<div class="col-sm-8">
-						<input type="text" style="width:70%" 
-							   ng-readonly="updateable" 
-							   ng-model="input.id"/>
-
-					</div>
-				</div>
-				<div>
-					<div class="row">
-						<div class="col-sm-12">
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-2">Description</div>
-					<div class="col-sm-8">
-						<textarea rows="10" cols="15" style="width:70%;" 
-								  ng-model="input.commandDescription"></textarea>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-2">
-						<div class="btn-group" style="width:80%; horizontal-align: centre">
-							<button href="#/all" class="btn btn-primary" 
-								ng-show="updateable" ng-click="addCommand()">Update
-							</button>
-							<button class="btn btn-primary" 
-								ng-show="!updateable" ng-click="addCommand()">Insert
-							</button>
-						</div>
-					</div>
-					<div class="col-sm-8"></div>
-					</div>
-				
-			</form>
-		</div>
+		   ng-click="vm.newCommand()">New Command
+		 </a>
 	</div>
 </div>
