parameters with routing

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="./js/commands/commands.js"></script>
   <script src="./services/commands/commandManipulationService.js"></script>
   <script src="./backoffice/backoffice.js"></script>
+  <script src="./backoffice/editCommands.js"></script>
 
   </body>
 </html>
