--- a/backoffice/backoffice.html
+++ b/backoffice/backoffice.html
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 	<div class="btn-group">
-   		<a href="#/edit"
+   		<a href="#/edit/234324"
 		   ng-show="!vm.showNewCommand"
 		   class="btn btn-primary" 
 		   ng-click="vm.newCommand()">New Command
