--- a/backoffice/editCommands.html
+++ b/backoffice/editCommands.html
@@ -1,3 +1,56 @@
 <div>
-	Hello! {{vm.test}}
+	<div class="btn-group">
+		 <a href="#/commands"
+		   class="btn btn-primary">
+		   	To Command List
+		 </a>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+            <h3 class="panel-title">New Command</h3>
+        </div>
+        <div class="panel-body">
+			<form>
+				<div class="row">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-2">Command Name</div>
+					<div class="col-sm-8">
+						<input type="text" style="width:70%" 
+							   ng-readonly="vm.updateable" 
+							   ng-model="vm.input.id"/>
+
+					</div>
+				</div>
+				<div>
+					<div class="row">
+						<div class="col-sm-12">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-2">Description</div>
+					<div class="col-sm-8">
+						<textarea rows="10" cols="15" style="width:70%;" 
+								  ng-model="vm.input.commandDescription"></textarea>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-2">
+						<div class="btn-group" style="width:80%; horizontal-align: centre">
+							<a href="" class="btn btn-primary" 
+								ng-show="vm.updateable" ng-click="vm.addCommand()">Update
+							</a>
+							<a href="" class="btn btn-primary" 
+								ng-show="!vm.updateable" ng-click="vm.addCommand()">Insert
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-8"></div>
+					</div>
+				
+			</form>
+		</div>
+	</div>
 </div>
