--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -1,36 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Logo Command Simluator</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="grid.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
     <div class="container">
       <div class="row">
       <div class="col-md-12">
@@ -45,12 +13,14 @@
             <div class="panel-heading">commands</div>
             <div class="panel-body" style="position: relative; bottom: 0; right: 0;">
             <ul class="list-group">
-                <li class="list-group-item">asdfds</li>
-                <li class="list-group-item">asdfds</li>
-                <li class="list-group-item">asdfds</li>
-                <li class="list-group-item">asdfds</li>
-                <li class="list-group-item">asdfds</li>
-                <li class="list-group-item">asdfds</li>
+                <li class="list-group-item" 
+                    ng-repeat="command in logo.commands">
+                    <a href="" 
+                       ng-mouseover="logo.describe(command)"
+                       ng-click="logo.commandSelected(command)">
+                        {{command.id}}
+                    </a>
+                </li>
             </ul>
             </div>
           </div>
@@ -65,12 +35,14 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-            a small description of things that are happening :)
+          {{logo.selectedCommandDescription}}
         </div>
       </div>
         <div class="row">
             <div class="col-md-10">
-              <textarea rows="8" cols="20" style="width: 100%"> </textarea>
+              <textarea rows="8" cols="20" style="width: 100%"
+                        ng-model="logo.currentCommands">
+              </textarea>
             </div>
             <div class="col-md-2">
               <div class="btn-group-vertical" style="width:90%">
@@ -83,5 +55,3 @@
         </div>
     </div>
  
-  </body>
-</html>
