--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -38,6 +38,13 @@
           {{logo.selectedCommandDescription}}
         </div>
       </div>
+      <div class="row">
+          <div class="col-md-12">
+            <div class="alert {{logo.alertClass}}">
+              <strong>{{logo.execOutcomeMessage}}</strong> 
+            </div>
+          </div>
+      </div>
         <div class="row">
             <div class="col-md-10">
               <textarea rows="8" cols="20" style="width: 100%"
