--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -28,7 +28,7 @@
         <div class="col-md-9">
         <div class="jumbotron" style="max-height:20;overflow-y: scroll;">
           </p> 
-          <canvas id="logoCanvas" width="200" height="70" style="width:100%"></canvas>
+          <canvas id="logoCanvas" width="200" height="160"></canvas>
         </div>
       </div>
       </div>
