--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="./bower_components/angular/angular.min.js"></script>
   <script src="./bower_components/angular-route/angular-route.min.js"></script>
   <script src="./js/commands/commands.js"></script>
+  <script src="../js/geometry/transforms.js"></script>
   <script src="./services/commands/commandManipulationService.js"></script>
   <script src="./backoffice/backoffice.js"></script>
   <script src="./public/logoSimulator.js"></script>
