--- a/backoffice/backoffice.html
+++ b/backoffice/backoffice.html
@@ -20,7 +20,7 @@
 				<tbody>
 					<tr ng-repeat="command in vm.commands">
 						<td>
-							<a href="#/edit/{{command.id}}" ng-click="vm.selectCommand(command)">{{command.id}}</a>
+							<a href="v1/edit/{{command.id}}" ng-click="vm.selectCommand(command)">{{command.id}}</a>
 						</td>
 						<td>{{command.commandDescription}}</td>
 						<td>
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 	<div class="btn-group">
-   		<a href="#/edit"
+   		<a href="v1/edit"
 		   ng-show="!vm.showNewCommand"
 		   class="btn btn-primary" 
 		   ng-click="vm.newCommand()">New Command
