--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
      <title>Logo Command Simluator - back office</title>
 
+     <base href="/">
+
     <!-- Bootstrap core CSS -->
      <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
