--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -55,7 +55,8 @@
               <div class="btn-group-vertical" style="width:90%">
                 <button type="button" class="btn btn-primary"
                         ng-click="logo.evaluate()">run</button>
-                <button type="button" class="btn btn-primary">clear</button>
+                <button type="button" class="btn btn-primary"
+                        ng-click="logo.clear()">clear</button>
               </div>
             </div>
         </div>
