passing data to directive

--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -28,7 +28,9 @@
         <div class="col-md-9">
         <div class="jumbotron" style="max-height:20;overflow-y: scroll;">
           </p> 
-          <canvas id="logoCanvas" width="760" height="300"></canvas>
+            {{logo.coms}}
+              <show-logo todraw="{{logo.coms}}"></show-logo>
+            
         </div>
       </div>
       </div>
