--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="./bower_components/angular/angular.min.js"></script>
   <script src="./bower_components/angular-route/angular-route.min.js"></script>
   <script src="./js/commands/commands.js"></script>
+  <script src="../directives/showLogoDirective.js"></script>
   <script src="../js/geometry/transforms.js"></script>
   <script src="./services/commands/commandParsingService.js"></script>
   <script src="./services/commands/commandManipulationService.js"></script>
