logoDrawing in new file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <script src="./js/commands/commands.js"></script>
   <script src="../js/geometry/transforms.js"></script>
   <script src="./services/commands/commandParsingService.js"></script>
+  <script src="../directives/logoDrawing.js"></script>
   <script src="../directives/showLogoDirective.js"></script>
   <script src="./services/commands/commandManipulationService.js"></script>
   <script src="./backoffice/backoffice.js"></script>
