--- a/public/logoSimulator.html
+++ b/public/logoSimulator.html
@@ -28,7 +28,7 @@
         <div class="col-md-9">
         <div class="jumbotron" style="max-height:20;overflow-y: scroll;">
           </p> 
-              <show-logo todraw="{{logo.coms}}" 
+              <show-logo todraw="logo.drawCommands" 
                          on-error="logo.onEvalError(errorMessage)"
                          clear-previous="logo.shouldClearPrevious()"
                          on-success="logo.onEvalSuccess()">
@@ -59,7 +59,10 @@
             <div class="col-md-2">
               <div class="btn-group-vertical" style="width:90%">
                 <button type="button" class="btn btn-primary"
-                        ng-click="logo.evaluate()">run
+                        ng-click="logo.run()">run
+                </button>
+                <button type="button" class="btn btn-primary"
+                        ng-click="logo.clearAndRun()">clear and run
                 </button>
                 <button type="button" class="btn btn-primary"
                         ng-click="logo.clearDrawing()">clear drawing only
