--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
     <div ng-view></div>
   </div>
   <script src="./bower_components/angular/angular.min.js"></script>
+  <script src="./bower_components/angular-cookies/angular-cookies.min.js"></script>
+  <script src="./js/users/index.js"></script>
+  <script src="./js/users/users.constants.js"></script>
+  <script src="./js/users/users.service.js"></script>
+  <script src="./js/auth/index.js"></script>
+  <script src="./js/auth/auth.service.js"></script>
+
   <script src="./bower_components/angular-route/angular-route.min.js"></script>
   <script src="./js/commands/commands.js"></script>
+  <script src="./login/login.js"></script>
   <script src="../js/geometry/transforms.js"></script>
   <script src="./services/commands/commandParsingService.js"></script>
   <script src="../directives/logoDrawing.js"></script>
