--- a/login.html
+++ b/login.html
@@ -14,5 +14,6 @@
         </form>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
 </div>
