--- a/backoffice/backoffice.html
+++ b/backoffice/backoffice.html
@@ -4,9 +4,20 @@
 		<p class="lead"></p>
 	</div>
 
+	<div class="row">
+		<div class="col-sm-11">
+	        <h3 class="panel-title"><b>Welcome {{vm.loggedUser}}</b></h3>
+	    </div>
+	    <div class="col-sm-1">
+	    	<a href="" ng-click="vm.logOut()"> 
+	    		Logout
+	    	</a>
+	    </div>
+    </div>
+
 	<div class="panel panel-default" ng-show="!vm.showNewCommand">
 		<div class="panel-heading">
-            <h3 class="panel-title">List of Commands</h3>
+				List of Commands
         </div>
         <div class="panel-body">
 			<table class="table">
