--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <script src="./js/auth/auth.service.js"></script>
 
       <script src="./bower_components/angular-route/angular-route.min.js"></script>
+      <script src="./js/commands/LogoCommandParser.js"></script>
       <script src="./js/commands/commands.js"></script>
       <script src="./login/login.js"></script>
       <script src="../js/geometry/transforms.js"></script>
