--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <script src="./bower_components/angular-route/angular-route.min.js"></script>
       <script src="./js/commands/LogoCommandParser.js"></script>
       <script src="./js/commands/commands.js"></script>
+      <script src="./js/commands/commands.constants.js"></script>
       <script src="./login/login.js"></script>
       <script src="../js/geometry/transforms.js"></script>
       <script src="./services/commands/commandParsingService.js"></script>
