--- a/backoffice/editCommands.html
+++ b/backoffice/editCommands.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="btn-group">
-		 <a href="v1/commands"
+		 <a href="evalLogo/commands"
 		   class="btn btn-primary">
 		   	To Command List
 		 </a>
