sha224 and further descriptions in the readme file

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <script src="./js/auth/index.js"></script>
       <script src="./js/auth/auth.service.js"></script>
 
+      <script src="./bower_components/js-sha256/src/sha256.js"></script>
       <script src="./bower_components/angular-route/angular-route.min.js"></script>
       <script src="./js/commands/LogoCommandParser.js"></script>
       <script src="./js/commands/commands.js"></script>
